src/objects/Resultados__c.object
<CustomObject>
    <description>Objeto Resultados utilizado por Drivia en el proceso de desduplicacion y mantenimiento de la base de datos.</description>
    <fields>
        <fullName>DR_date_output__c</fullName>
        <label>date_output</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DR_id_nou__c</fullName>
        <label>id_nou</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_id_registre__c</fullName>
        <label>id_registre</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ca_json__c</fullName>
        <label>ca_json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>co_json__c</fullName>
        <label>co_json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>id_propietari_nou__c</fullName>
        <label>id_propietari_nou</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id_propietari_similar__c</fullName>
        <label>id_propietari_similar</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>le_json__c</fullName>
        <label>le_json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>score_features__c</fullName>
        <label>score_features</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tipus__c</fullName>
        <label>tipus</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tipus_id_registre__c</fullName>
        <label>tipus_id_registre</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Resultado</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>DR_id_nou__c</columns>
        <columns>tipus_id_registre__c</columns>
        <columns>DR_id_registre__c</columns>
        <columns>tipus__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>R{0000000}</displayFormat>
        <label>Nombre de Resultados</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resultados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>